--- a/ConsoleApp_Net6/ConsoleApp_Net6.csproj
+++ b/ConsoleApp_Net6/ConsoleApp_Net6.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="TouchSocket" Version="1.2.14" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\IntelligentCoder.SourceGenerator\IntelligentCoder.SourceGenerator.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
   </ItemGroup>
 
