--- a/IntelligentCoder/IntelligentCoder.csproj
+++ b/IntelligentCoder/IntelligentCoder.csproj
@@ -5,14 +5,14 @@
 		<ApplicationIcon>logo.ico</ApplicationIcon>
 		<DevelopmentDependency>true</DevelopmentDependency>
 		<AssemblyOriginatorKeyFile>D:\MyStore\13_Doc\Keys\IntelligentCoder.snk</AssemblyOriginatorKeyFile>
-		<Version>0.1.0</Version>
+		<Version>1.0.0</Version>
 		<NoPackageAnalysis>true</NoPackageAnalysis>
 		<Company>若汝棋茗</Company>
 		<Copyright>Copyright © 2023 若汝棋茗</Copyright>
 		<PackageTags>async,analyzer</PackageTags>
-		<Description>
-			这是一个异步代码生成器。
-		</Description>
+		<Description>这是一个能辅助你实现异步代码的生成器。他可以在接口，类，结构体上工作。有时候甚至还能给已编译的方法扩展异步。
+
+This is a generator that helps you implement asynchronous code. It can work on interfaces, classes, and structures. Sometimes you can even extend asynchrony to compiled methods.</Description>
 		<PackageProjectUrl>https://gitee.com/RRQM_Home/IntelligentCoder</PackageProjectUrl>
 		<PackageIconUrl></PackageIconUrl>
 		<PackageIcon>logo.png</PackageIcon>
